added trivy vulnerability scan to workflow

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,6 +15,14 @@ jobs:
     - name: Checkout Code
       uses: actions/checkout@v4
 
+    - name: Run Trivy vulnerability scanner in fs mode
+      uses: aquasecurity/trivy-action@0.28.0
+      with:
+        scan-type: 'fs'
+        scan-ref: '.'
+        severity: 'HIGH,CRITICAL'
+        exit-code: 1
+
     - name: Archive or Zip Project
       run: zip -r go-rest-api.zip ./*
 
